--- a/language/en-GB/en-GB.mod_rsgallery2_image_wall.ini
+++ b/language/en-GB/en-GB.mod_rsgallery2_image_wall.ini
@@ -1,7 +1,7 @@
 ;RSGallery2 latest images module: shows latest images from the Joomla extension RSGallery2 (www.rsgallery2.nl).
 ;@copyright (C) 2012 RSGallery2 Team
 ;@license http://www.gnu.org/copyleft/gpl.html GNU/GPL
-MOD_RSGALLERY2_IMAGE_WALL="RSGallery2 Image Wall module"
+MOD_RSGALLERY2_IMAGE_WALL="RSGallery2 Image wall module"
 MOD_RSGALLERY2_IMAGE_WALL_DESC="Module to show a collection of images from RSGallery2 side by side on one merged image"
 
 MOD_RSGALLERY2_IMAGE_WALL_NUMBER_OF_IMAGES="Number of images = row number times column number"
