--- a/language/en-GB/en-GB.mod_rsgallery2_image_wall.sys.ini
+++ b/language/en-GB/en-GB.mod_rsgallery2_image_wall.sys.ini
@@ -1,4 +1,4 @@
-;RSGallery2 image wall module: Module to show a collection of images from RSGallery2 side by side (www.rsgallery2.nl).
+;RSGallery2 image wall module: Module to show a collection of images from RSGallery2 side by side (www.rsgallery2.org).
 ;@copyright (C) 2015 RSGallery2 Team
 ;@license http://www.gnu.org/copyleft/gpl.html GNU/GPL
 MOD_RSGALLERY2_IMAGE_WALL="RSGallery2 Image wall module"
